// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for News & International 1`] = `
<html
  dir="ltr"
  lang="en-gb"
>
  <head>
    <title>
      Article Headline for SEO - BBC News
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.com/pathname"
      hreflang="x-default"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.com/pathname"
      hreflang="en"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.co.uk/pathname"
      hreflang="en-gb"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.co.uk/pathname.amp"
      rel="amphtml"
    />
    <link
      href="http://localhost:7080/news/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-180x180.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News"
      name="application-name"
    />
    <meta
      content="Article Headline for SEO"
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="285361880228,192168680794107,9432520138,347501767628,264572343581678,303522857815,166580710064489,592266607456680,260669183761,160817274042538,236659822607,237647452933504,10150118096995434,113097918700687,143048895744759,81395234664,207150596007088,167959249906191,64040652712,190992343324,103678496456574,367167334474,160894643929209,186742265162,1526071940947174,230299653821,124158667615790,126548377386804,298318986864908,1068750829805728,228458913833525,163571453661989,660673490805047,948946275170651,485274381864409,1633841096923106,654070648098812"
      property="fb:pages"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/news/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="Article Headline for SEO"
      property="og:description"
    />
    <meta
      content="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png"
      property="og:image"
    />
    <meta
      content="BBC News"
      property="og:image:alt"
    />
    <meta
      content="en_GB"
      property="og:locale"
    />
    <meta
      content="BBC News"
      property="og:site_name"
    />
    <meta
      content="Article Headline for SEO - BBC News"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@BBCNews"
      name="twitter:creator"
    />
    <meta
      content="Article Headline for SEO"
      name="twitter:description"
    />
    <meta
      content="BBC News"
      name="twitter:image:alt"
    />
    <meta
      content="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png"
      name="twitter:image:src"
    />
    <meta
      content="@BBCNews"
      name="twitter:site"
    />
    <meta
      content="Article Headline for SEO - BBC News"
      name="twitter:title"
    />
    <meta
      content="Royal Wedding 2018"
      name="article:tag"
    />
    <meta
      content="Duchess of Sussex"
      name="article:tag"
    />
    <meta
      content="Queen Victoria"
      name="article:tag"
    />
    <meta
      content="https://www.facebook.com/bbcnews"
      name="article:author"
    />
    <meta
      content="2018-01-01T13:00:00.000Z"
      name="article:modified_time"
    />
    <meta
      content="2018-01-01T12:01:00.000Z"
      name="article:published_time"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`should match snapshot for Persian News & UK origin 1`] = `
<html
  dir="rtl"
  lang="fa"
>
  <head>
    <title>
      سرصفحه مقاله - BBC News فارسی
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.co.uk/pathname"
      hreflang="fa"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.co.uk/pathname.amp"
      rel="amphtml"
    />
    <link
      href="http://localhost:7080/persian/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-180x180.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News فارسی"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News فارسی"
      name="application-name"
    />
    <meta
      content="سرصفحه مقاله"
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="285361880228,192168680794107,9432520138,347501767628,264572343581678,303522857815,166580710064489,592266607456680,260669183761,160817274042538,236659822607,237647452933504,10150118096995434,113097918700687,143048895744759,81395234664,207150596007088,167959249906191,64040652712,190992343324,103678496456574,367167334474,160894643929209,186742265162,1526071940947174,230299653821,124158667615790,126548377386804,298318986864908,1068750829805728,228458913833525,163571453661989,660673490805047,948946275170651,485274381864409,1633841096923106,654070648098812"
      property="fb:pages"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="سرصفحه مقاله"
      property="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"
      property="og:image"
    />
    <meta
      content="BBC News فارسی"
      property="og:image:alt"
    />
    <meta
      content="fa"
      property="og:locale"
    />
    <meta
      content="BBC News فارسی"
      property="og:site_name"
    />
    <meta
      content="سرصفحه مقاله - BBC News فارسی"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@bbcpersian"
      name="twitter:creator"
    />
    <meta
      content="سرصفحه مقاله"
      name="twitter:description"
    />
    <meta
      content="BBC News فارسی"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"
      name="twitter:image:src"
    />
    <meta
      content="@bbcpersian"
      name="twitter:site"
    />
    <meta
      content="سرصفحه مقاله - BBC News فارسی"
      name="twitter:title"
    />
    <meta
      content="https://www.facebook.com/bbcnews"
      name="article:author"
    />
    <meta
      content="2018-01-01T13:00:00.000Z"
      name="article:modified_time"
    />
    <meta
      content="2018-01-01T12:01:00.000Z"
      name="article:published_time"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;
